# Banshee

./: .env-SAMPLE  .env.example  .envSAMPLE  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  index-old.js  index.js  package-lock.json  package.json  pg_hba.conf  postgresql.conf  register-commands.js  terms-and-privacy.md
commands/: ban.js  broadcast.js  enroll.js  filter.js  filterlist.js  help.js  pet.js  super.js
commands-old/: help.js  pet.js  refresh.js  super.js  supers.js  userinfo.js
migration/: Cargo.toml  Dockerfile  banned_users.txt
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250819_045150_backfill_bans.rs  m20250910_020915_create_allow_list.rs
mongoMigration/: Dockerfile  index.js
src/: database.rs  main.rs  types.rs
src/commands/: age.rs  allow.rs  allowlist.rs  ban.rs  help.rs  mod.rs  pet.rs  refresh.rs  register.rs  removelegacybans.rs  report.rs  supercmd.rs  supers.rs  unallow.rs  unban.rs  unsuper.rs  unwhitelist.rs  user.rs  whitelist.rs
src/entities/: allow_list.rs  ban.rs  mod.rs  prelude.rs  report.rs  user.rs  whitelist.rs
src/services/: allow_list_service.rs  ban_service.rs  config_service.rs  database_service.rs  event_handler_service.rs  mod.rs  report_service.rs  user_service.rs
util/: bc.js  bonkNum.js  databaseClient.js  isSuper.js  operationTime.js  toggleDB.js
util-old/: bc.js  filterCatch.js  isBanned.js  isSuper.js  operationTime.js  toggleDB.js  toggleFilter.js
